# substrate

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DISPATCH_MIGRATION_PLAN_2026_06_30.md  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  Justfile  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  SPEC.md  STATUS.md  Taskfile.yml  audit_scorecard.json  clippy.toml  codecov.yml  deny.toml  gitleaks.toml  justfile  lefthook.yml  llms.txt  nextest.toml  package.json  process-compose.yaml  rust-toolchain.toml  substrate-audit-dag-plan.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.substrate-gw/: gateway.db-shm  gateway.db-wal  mailbox.db-shm  mailbox.db-wal
Formula/: sharecli.rb
compose/: README.md  forge-daemon.json  substrate-gateway.json
config/: sharecli.toml.example
crates/a2a/: Cargo.toml  README.md
crates/a2a/src/: error.rs  lib.rs  task.rs
crates/a2a/tests/: schema_tests.rs
crates/arch-test/: Cargo.toml
crates/arch-test/src/: lib.rs
crates/arch-test/tests/: architecture.rs  nextest_ci.rs
crates/cliproxy-adapter/: Cargo.toml
crates/cliproxy-adapter/src/: lib.rs
crates/cloud-codex/: Cargo.toml  README.md
crates/cloud-codex/src/: cli.rs  lib.rs
crates/cloud-cursor/: Cargo.toml  README.md
crates/cloud-cursor/src/: api.rs  lib.rs
crates/cloud-dispatch-conformance/: Cargo.toml  README.md
crates/cloud-dispatch-conformance/src/: fake.rs  lib.rs
crates/cloud-kilo/: Cargo.toml  README.md
crates/cloud-kilo/src/: gateway.rs  lib.rs  worker.rs
crates/context-budget/: Cargo.toml
crates/context-budget/src/: lib.rs
crates/dispatch-bridge/: Cargo.toml
crates/dispatch-bridge/src/: lib.rs
crates/driver-argv/: Cargo.toml
crates/driver-argv/src/: cli.rs  dispatch.rs  lib.rs  provider.rs
crates/driver-argv/tests/: build_argv.rs
crates/driver-cli/: Cargo.toml
crates/driver-cli/src/: cloud_dispatch.rs  main.rs  plan.rs  serve.rs  splash.rs  theme.rs
crates/driver-cli/tests/: cli.rs  iconset.rs
crates/driver-http/: Cargo.toml  README.md
crates/driver-http/src/: config.rs  lib.rs  main.rs  plan.rs
crates/driver-http/tests/: api.rs
crates/driver-mcp/: Cargo.toml
crates/driver-mcp/src/: lib.rs
crates/engine-a2a/: Cargo.toml
crates/engine-a2a/src/: lib.rs
crates/engine-a2a/tests/: a2a_engine.rs
crates/engine-agentapi/: Cargo.toml
crates/engine-agentapi/src/: lib.rs  multi_agent_router.rs  routing.rs
crates/engine-claude/: Cargo.toml
crates/engine-claude/src/: lib.rs
crates/engine-codex/: Cargo.toml
crates/engine-codex/src/: lib.rs
crates/engine-conformance/: Cargo.toml
crates/engine-conformance/src/: lib.rs
crates/engine-forge/: Cargo.toml  README.md
crates/engine-forge/src/: lib.rs  parse.rs  throttle_gate.rs
crates/engine-forge/tests/: daemon_fastpath.rs  forge_daemon_bench.rs  golden.rs  real_forge.rs  spawn.rs  throttle_bench.rs
crates/engine-forge/tests/fixtures/: dump_max_steps.json  dump_no_pr.json  dump_nonzero_exit.json  dump_with_pr.json
crates/engine-spec/: Cargo.toml  README.md
crates/engine-spec/src/: lib.rs
crates/file-watcher/: Cargo.toml
crates/file-watcher/src/: lib.rs
crates/forge_daemon/: Cargo.toml  build.rs
crates/forge_daemon/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway-tools/: Cargo.toml
crates/gateway-tools/src/: main.rs  routes.rs  serve.rs
crates/gateway/src/: admin.rs  aho_corasick.rs  ansi.rs  asn1_ber.rs  asn1_der.rs  astar_basic.rs  avl_tree.rs  backoff.rs  banner.rs  base32.rs  base58.rs  base64.rs  base64url.rs  base85.rs  base_n_radix.rs  bencode.rs  bip39_mnemonic.rs  bip39_wordlist.rs  bitcoin_bech32.rs  bitcoin_segwit_addr.rs  bitfield.rs  bitset.rs  black_scholes.rs  blake2.rs  blake3_hash.rs  bloom_filter.rs  bloom_gw.rs  blowfish.rs  bmp_image.rs  bounded_body.rs  boyer_moore.rs  brontide_replay.rs  brotli_dict.rs  bucket.rs  budget.rs  budget_tracker.rs  byte_size.rs  bytebuf.rs  cache2.rs  caesar_cipher.rs  (+242 more)
crates/gateway/tests/: api.rs
crates/harness-native/: Cargo.toml
crates/harness-native/src/: cache_key.rs  dispatcher.rs  find_real.rs  is_agent.rs  lib.rs
crates/harness-native/src/strategies/: batch.rs  cache.rs  causal_order.rs  circuit_breaker.rs  debounce.rs  incremental.rs  mod.rs  process.rs  queue.rs  retry.rs
crates/harness-native/tests/: native_harness_contract.rs
crates/omniroute-adapter/: Cargo.toml
crates/omniroute-adapter/src/: lib.rs
crates/omniroute-adapter/tests/: routing.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: claude_stream.rs  dispatcher.rs  lib.rs  runner.rs  stream.rs  watcher.rs  wave.rs
desktop/: build.sh
docs/: F3_OMNIROUTE_INTEGRATION.md  FAQ.md  GLOSSARY.md  PILOT_RESULTS.md  REFERENCE_dispatchTools.ts  REFERENCE_server_ts_changes.md  RFC.md  SLO.md  SSOT.md  USER_JOURNEYS.md  VISUAL_SPEC.md  friction-log.md  functional_requirements.md  index.md  openapi.yaml  slsa.md
driver-mcp/: .gitignore  README.md  SYNC.md  _db.py  _http.py  _sanitize.py  dispatch_server.py  lead_server.py  pyproject.toml  requirements.txt  substrate_server.py  team_mailbox_server.py  test_sanitize.py  test_substrate_tools.py
driver-mcp/dispatch_mcp/: __init__.py  health.py  server.py
driver-mcp/dispatch_mcp/adapters/: __init__.py  omni_http.py
driver-mcp/dispatch_mcp/core/: __init__.py  port.py  types.py
driver-mcp/tests/: conftest.py  test_dispatch_server.py
forge-daemon/: build.zig
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: asn1_der.rs  cron_parser.rs  ini_parser.rs  openai_chat_request.rs  psub_a2a_message.rs
scripts/: audit.sh  check_driver_mcp_sync.py  install.ps1  install.sh  package.sh  release-crates-publish.sh  release-preflight.sh  test_release_crates_publish.sh  verify_devcontainer.py  verify_documentation_quality.py  verify_justfile.py  verify_lefthook_config.py  (+5 more)
src/: astar.rs  (+54 more)
(+463 files in other folders)
