[package]
name = "sharecli"
version = "0.1.0"
edition = "2021"
description = "Shared CLI process manager for multi-project agent orchestration"
license = "MIT"
authors = ["Phenotype"]
repository = "https://github.com/KooshaPari/sharecli"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Process management (substrate SDK + adapter)
substrate = { git = "https://github.com/KooshaPari/substrate", default-features = false }
runtime-process = { git = "https://github.com/KooshaPari/substrate", package = "runtime-process" }
sysinfo = "0.39"

# Zig hot core: POSIX semaphore, posix_spawn, setpriority, waitpid
spawn-core-sys = { path = "crates/spawn-core-sys" }

# Fleet: device registry + thermal governor
sharecli-fleet = { path = "crates/sharecli-fleet" }

# Thermal TUI
sharecli-thermal-tui = { path = "crates/sharecli-thermal-tui" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The tray is a background helper, not on any hot path — optimize it for size.
[profile.release.package.sharecli-tray-linux]
opt-level = "z"

[workspace]
members = [
    "crates/harness-native",
    "crates/sharecli-ipc",
    "crates/sharecli-ffi",
    "crates/sharecli-tray-linux",
    "crates/sharecli-fleet",
    "crates/spawn-core-sys",
    "crates/sharecli-fuse",
    "crates/sharecli-core",
    "crates/sharecli-thermal-tui",
]

# ---------------------------------------------------------------------------
# cargo-dist release automation
# ---------------------------------------------------------------------------
# This section is consumed by `cargo dist` and the release workflow to
# produce per-platform binaries + installer archives for the CLI and the
# Linux tray.  The macOS Swift tray and Windows WinUI 3 tray are assembled
# by separate steps in the workflow (they are not cargo crates).
[workspace.metadata.dist]
dist = true
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
# Apps built by cargo-dist (all Rust workspace binaries we ship).
# The Swift tray + WinUI 3 tray are added by the workflow.
ci = ["github"]
hosting = ["github"]
app-local = ["sharecli", "sharecli-ipc", "sharecli-tray-linux"]
