[workspace]
resolver = "2"
exclude = ["crates/forge_daemon"]
members = [
    "crates/substrate",
    "crates/substrate-core",
    "crates/engine-spec",
    "crates/engine-forge",
    "crates/transport-file",
    "crates/store-file",
    "crates/substrate-app",
    "crates/driver-cli",
    "crates/driver-http",
    "crates/driver-argv",
    "crates/driver-mcp",
    "crates/gateway",
    "crates/arch-test",
    "crates/omniroute-adapter",
    "crates/routing-phenotype-router",
    "tools/fake-forge",
    "tools/fake-codex-cloud",
    "crates/a2a",
    "crates/store-sqlite",
    "crates/supervisor",
    "crates/wave",
    "crates/engine-conformance",
    "crates/engine-codex",
    "crates/engine-claude",
    "crates/engine-a2a",
    "crates/engine-agentapi",
    "crates/cliproxy-adapter",
    "crates/substrate-trace",
    "crates/substrate-schedule",
    "crates/substrate-dag",
    "crates/substrate-skills",
    "crates/substrate-memory",
    "crates/runtime-process",
    "crates/file-watcher",
    "crates/phenotype-mcp",
    "crates/context-budget",
    "crates/wave-3lane-tests",
    "crates/dispatch-bridge",
    "crates/cloud-dispatch-conformance",
    "crates/cloud-cursor",
    "crates/cloud-kilo",
    "crates/cloud-codex",
    "crates/substrate-serve-lock",
    "crates/substrate-tui",
    "crates/gateway-tools",
    "crates/orchestrator",
]
[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/substrate"
rust-version = "1.80"

[workspace.dependencies]
substrate = { version = "0.3.0", path = "crates/substrate" }
substrate-core = { version = "0.3.0", path = "crates/substrate-core" }
substrate-serve-lock = { version = "0.3.0", path = "crates/substrate-serve-lock" }
substrate-trace = { version = "0.3.0", path = "crates/substrate-trace" }
substrate-app = { version = "0.3.0", path = "crates/substrate-app" }
substrate-dag = { version = "0.3.0", path = "crates/substrate-dag" }
substrate-memory = { version = "0.3.0", path = "crates/substrate-memory" }
substrate-schedule = { version = "0.3.0", path = "crates/substrate-schedule" }
substrate-skills = { version = "0.3.0", path = "crates/substrate-skills" }
substrate-tui = { version = "0.3.0", path = "crates/substrate-tui" }
engine-spec = { version = "0.3.0", path = "crates/engine-spec" }
engine-forge = { version = "0.3.0", path = "crates/engine-forge" }
engine-codex = { version = "0.3.0", path = "crates/engine-codex" }
engine-claude = { version = "0.3.0", path = "crates/engine-claude" }
engine-a2a = { version = "0.3.0", path = "crates/engine-a2a" }
engine-agentapi = { version = "0.3.0", path = "crates/engine-agentapi" }
engine-conformance = { version = "0.3.0", path = "crates/engine-conformance" }
a2a = { version = "0.3.0", path = "crates/a2a" }
store-sqlite = { version = "0.3.0", path = "crates/store-sqlite" }
store-file = { version = "0.3.0", path = "crates/store-file" }
cliproxy-adapter = { version = "0.3.0", path = "crates/cliproxy-adapter" }
transport-file = { version = "0.3.0", path = "crates/transport-file" }
routing-phenotype-router = { version = "0.3.0", path = "crates/routing-phenotype-router" }
omniroute-adapter = { version = "0.3.0", path = "crates/omniroute-adapter" }
file-watcher = { version = "0.3.0", path = "crates/file-watcher" }
context-budget = { version = "0.3.0", path = "crates/context-budget" }
dispatch-bridge = { version = "0.3.0", path = "crates/dispatch-bridge" }
runtime-process = { version = "0.3.0", path = "crates/runtime-process" }
cloud-codex = { version = "0.3.0", path = "crates/cloud-codex" }
cloud-cursor = { version = "0.3.0", path = "crates/cloud-cursor" }
cloud-kilo = { version = "0.3.0", path = "crates/cloud-kilo" }
cloud-dispatch-conformance = { version = "0.3.0", path = "crates/cloud-dispatch-conformance" }
driver-cli = { version = "0.3.0", path = "crates/driver-cli" }
driver-http = { version = "0.3.0", path = "crates/driver-http" }
driver-argv = { version = "0.3.0", path = "crates/driver-argv" }
driver-mcp = { version = "0.3.0", path = "crates/driver-mcp" }
gateway = { version = "0.3.0", path = "crates/gateway" }
gateway-tools = { version = "0.3.0", path = "crates/gateway-tools" }
supervisor = { version = "0.3.0", path = "crates/supervisor" }
phenotype-mcp = { version = "0.3.0", path = "crates/phenotype-mcp" }
wave = { version = "0.3.0", path = "crates/wave" }
wave-3lane-tests = { version = "0.3.0", path = "crates/wave-3lane-tests" }
orchestrator = { version = "0.3.0", path = "crates/orchestrator" }
arch-test = { version = "0.3.0", path = "crates/arch-test" }
forge_daemon = { version = "0.2.0", path = "crates/forge_daemon" }
fake-forge = { version = "0.3.0", path = "tools/fake-forge" }
fake-codex-cloud = { version = "0.3.0", path = "tools/fake-codex-cloud" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
regex = "1.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "1.1"
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
croner = "3.0"
petgraph = "0.8"
strsim = "0.11"
command-group = { version = "5.0", features = ["with-tokio"] }
notify-debouncer-mini = "0.7"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
http-body-util = "0.1"
futures = "0.3"
futures-core = "0.3"
parking_lot = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
fs2 = "0.4"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
