[project]
name = "driver-mcp"
version = "0.1.0"
description = "FastMCP servers exposing substrate dispatch and team mailbox tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["."]
