[package]
name = "arch-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Architecture conformance tests: enforces hexagonal dependency direction."
publish = false

[dependencies]

[dev-dependencies]
toml.workspace = true
