[package]
name = "cliproxy-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "EnginePort adapter for KooshaPari/cliproxyapi-plusplus — the Plus fork of router-for-me/CLIProxyAPI exposing 50+ agent CLIs (claude, codex, gemini, copilot, q, opencode, etc.) over a single OpenAI-compat /v1 endpoint."

[dependencies]
substrate-core = { version = "0.3.2", path = "../substrate-core" }
engine-spec = { version = "0.3.2", path = "../engine-spec" }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures-util = "0.3"
bytes = "1.8"

[dev-dependencies]
engine-conformance = { version = "0.3.2", path = "../engine-conformance" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
