[package]
name = "cloud-dispatch-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Contract-test suite and fake CloudDispatchPort for cloud-dispatch adapters."
publish = false
readme = "README.md"
keywords = ["cloud", "dispatch", "conformance", "substrate"]
categories = ["development-tools"]

[dependencies]
substrate-core.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
cloud-codex = { version = "0.3.8", path = "../cloud-codex" }
tokio = { workspace = true, features = ["macros", "rt"] }
