[package]
name = "cloud-kilo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CloudDispatchPort adapter for Kilo — gateway LLM + local git PR (no cloud-agent REST API)."
readme = "README.md"
keywords = ["kilo", "cloud", "dispatch", "adapter", "substrate"]
categories = ["development-tools"]

[dependencies]
substrate-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
dotenvy.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "process", "fs", "sync"] }
# The Kilo config types are defined locally in `gateway.rs`, not in psub-gateway.

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
