[package]
name = "context-budget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "EnginePort middleware that enforces per-conversation token budgets. Wraps any EnginePort impl and rejects/truncates/warns on overflow."
publish = false

[dependencies]
substrate-core = { version = "0.3.2", path = "../substrate-core" }
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
