[package]
name = "driver-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `substrate` CLI: composition root wiring app + adapters."

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
substrate-core = { path = "../substrate-core" }
substrate-app = { path = "../substrate-app" }
driver-argv = { path = "../driver-argv" }
engine-spec = { path = "../engine-spec" }
engine-forge = { path = "../engine-forge" }
engine-codex = { path = "../engine-codex" }
engine-claude = { path = "../engine-claude" }
engine-agentapi = { path = "../engine-agentapi" }
transport-file = { path = "../transport-file" }
store-file = { path = "../store-file" }
cloud-cursor = { path = "../cloud-cursor" }
cloud-kilo = { path = "../cloud-kilo" }
cloud-codex = { path = "../cloud-codex" }
driver-http = { path = "../driver-http" }
substrate-serve-lock = { path = "../substrate-serve-lock" }
clap.workspace = true
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "sync", "time", "signal"] }
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[package.metadata.bundle]
# Backbone-2 visual identity (decision 2026-07-06 by substrate-mesh).
# Icon source of truth: ../../assets/brand/substrate-icon.svg.
name = "substrate"
identifier = "ai.kooshapari.substrate"
icon = ["../../assets/icons/substrate.iconset"]
resources = []
category = "DeveloperTool"
short_description = "Release-ready hexagonal dispatch spine"
long_description = "Three driver faces (CLI/HTTP/MCP) sharing one planner and composition root."
