[package]
name = "driver-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP/REST inbound driver for substrate dispatch, planning, routing, and A2A mailbox."

[[bin]]
name = "substrate-http"
path = "src/main.rs"

[dependencies]
substrate-core = { path = "../substrate-core" }
substrate-app = { path = "../substrate-app" }
engine-spec = { path = "../engine-spec" }
engine-forge = { path = "../engine-forge" }
engine-codex = { path = "../engine-codex" }
engine-claude = { path = "../engine-claude" }
engine-agentapi = { path = "../engine-agentapi" }
transport-file = { path = "../transport-file" }
store-file = { path = "../store-file" }
store-sqlite = { path = "../store-sqlite" }
routing-phenotype-router = { path = "../routing-phenotype-router" }
a2a = { package = "substrate-a2a", path = "../a2a", version = "0.3.2" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
