[package]
name = "driver-http"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP/REST inbound driver for substrate dispatch, planning, routing, and A2A mailbox."

[[bin]]
name = "substrate-http"
path = "src/main.rs"

[dependencies]
substrate-core = { version = "0.3.5", path = "../substrate-core" }
substrate-app = { version = "0.3.5", path = "../substrate-app" }
engine-spec = { version = "0.3.5", path = "../engine-spec" }
engine-forge = { version = "0.3.5", path = "../engine-forge" }
engine-codex = { version = "0.3.5", path = "../engine-codex" }
engine-claude = { version = "0.3.5", path = "../engine-claude" }
engine-agentapi = { version = "0.3.5", path = "../engine-agentapi" }
transport-file = { version = "0.3.5", path = "../transport-file" }
store-file = { version = "0.3.5", path = "../store-file" }
store-sqlite = { version = "0.3.5", path = "../store-sqlite" }
routing-phenotype-router = { version = "0.3.5", path = "../routing-phenotype-router" }
a2a = { package = "substrate-a2a", path = "../a2a", version = "0.3.5" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
