[package]
name = "engine-a2a"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "EnginePort adapter for the A2A Agent-to-Agent REST protocol."

[dependencies]
a2a = { workspace = true }
substrate-core = { version = "0.3.7", path = "../substrate-core" }
engine-spec = { version = "0.3.7", path = "../engine-spec" }
async-trait = { workspace = true }
bytes = "1"
futures-util = "0.3"
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
engine-conformance = { version = "0.3.7", path = "../engine-conformance" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
